--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
       <label for="date">Дата: </label>
       <input type="date" id="date" name="date" />
 
+      <p class="error time"></p>
+      <label for="time">Время: </label>
+      <input type="time" id="time" name="time" />
+
       <p class="error comment"></p>
       <label for="comment">Отзыв:</label>
       <textarea id="comment" name="comment" rows="5" cols="40"></textarea>
