--- a/index.html
+++ b/index.html
@@ -21,11 +21,7 @@
       <input type="number" id="rating" name="rating" min="1" max="5" />
       <p class="error date"></p>
       <label for="date">Дата: </label>
-      <input type="date" id="date" name="date" />
-
-      <p class="error time"></p>
-      <label for="time">Время: </label>
-      <input type="time" id="time" name="time" />
+      <input type="datetime-local" id="date" name="date" />
 
       <p class="error comment"></p>
       <label for="comment">Отзыв:</label>
