add-like-functional

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="list">
-      
-    </div>
+    <div class="list"></div>
     <form id="form">
       <p class="error name"></p>
       <label for="name">Ваше имя:</label>
