--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="list"></div>
-    <form id="form">
+    <form id="form" id="form">
       <p class="error name"></p>
       <label for="name">Ваше имя:</label>
       <input type="text" id="name" name="name" />
@@ -25,7 +25,7 @@
       <label for="comment">Отзыв:</label>
       <textarea id="comment" name="comment" rows="5" cols="40"></textarea>
 
-      <button type="submit" id="formSubmit">Отправить</button>
+      <button type="submit">Отправить</button>
     </form>
 
     <script src="app.js"></script>
