--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <input type="number" id="rating" name="rating" min="1" max="5" />
       <p class="error date"></p>
       <label for="date">Дата: </label>
-      <input type="datetime-local" id="date" name="date" />
+      <input type="datetime-local" id="date" name="date" required="false" />
 
       <p class="error comment"></p>
       <label for="comment">Отзыв:</label>
