--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="list"></div>
-    <form id="form" id="form">
+    <form id="form" id="form" novalidate>
       <p class="error name"></p>
       <label for="name">Ваше имя:</label>
       <input type="text" id="name" name="name" />
@@ -19,7 +19,7 @@
       <input type="number" id="rating" name="rating" min="1" max="5" />
       <p class="error date"></p>
       <label for="date">Дата: </label>
-      <input type="datetime-local" id="date" name="date" required="false" />
+      <input type="datetime-local" id="date" name="date" />
 
       <p class="error comment"></p>
       <label for="comment">Отзыв:</label>
